tests/baselines/reference/derivedClassOverridesPrivateFunction1.errors.txt
tests/cases/compiler/derivedClassOverridesPrivateFunction1.ts(8,7): error TS2415: Class 'DerivedClass' incorrectly extends base class 'BaseClass'.
  Types have separate declarations of a private property '_init'.


==== tests/cases/compiler/derivedClassOverridesPrivateFunction1.ts (1 errors) ====
    class BaseClass {
        constructor() {
            this._init();
        }
        private _init() {
        }
    }
    class DerivedClass extends BaseClass {
          ~~~~~~~~~~~~
!!! error TS2415: Class '{|DerivedClass|0|}' incorrectly extends base class '{|BaseClass|1|}'.
!!! error TS2415:   Types have separate declarations of a private property '_init'.
!!! annotated symbol 0 tests/cases/compiler/derivedClassOverridesPrivateFunction1.ts:8:7
!!! annotated symbol 1 tests/cases/compiler/derivedClassOverridesPrivateFunction1.ts:1:7
        constructor() {
            super();
        }
        private _init() {
        }
    }
    new DerivedClass();